fixed spacing issues on ticket mobile

--- a/src/pages/Tickets.module.css
+++ b/src/pages/Tickets.module.css
@@ -122,7 +122,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    justify-content: space-between;
+    justify-content: center;
   }
 
   .bonus {
